[package]
name = "castiron"
version = "0.1.0"
authors = ["Flexabyte <flexabyte@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "*"
tokio = { version = "0.2.21", features = ["macros", "rt-core"] }
secp256k1 = { version = "0.17.2", features = ["rand"] }
time = "0.2.16"
sha2 = "0.8.2"
hex = "0.4.2"
base64 = "0.12.1"
rand = "0.7.3"
reqwest = "0.10.6"
