[package]
name = "castiron"
version = "0.1.0"
authors = ["Flexabyte <flexabyte@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iron = "*"
tokio = { version = "1.8.4", features = ["macros", "rt"] }
secp256k1 = { version = "0.22.1", features = ["rand"] }
time = "0.3.9"
sha2 = "0.10.2"
hex = "0.4.3"
base64 = "0.13.0"
rand = "0.8.5"
reqwest = "0.10.6"
http = "0.2.1"
